@@ -14,8 +14,8 @@ public class HhImportRunner implements ApplicationRunner {
     @Override
     public void run(ApplicationArguments args) throws Exception {
         if (args.containsOption("import-hh-design")) {
-            int maxPages = optInt(args, "maxPages", 10);
-            int maxDetails = optInt(args, "maxDetails", 300);
+            int maxPages = optInt(args, "maxPages", 0);
+            int maxDetails = optInt(args, "maxDetails", 0);
 
             var st = importer.importDesignerDefaults(maxPages, maxDetails);
             System.out.println("HH import (designer) done: saved=" + st.saved +
@@ -31,8 +31,8 @@ public class HhImportRunner implements ApplicationRunner {
         String text = optStr(args, "text", "дизайн");
         int area = optInt(args, "area", 1);
         int perPage = optInt(args, "perPage", 50);
-        int maxPages = optInt(args, "maxPages", 10);
-        int maxDetails = optInt(args, "maxDetails", 300);
+        int maxPages = optInt(args, "maxPages", 0);
+        int maxDetails = optInt(args, "maxDetails", 0);
 
         var st = importer.importByText(text, area, perPage, maxPages, maxDetails);
 
@@ -44,10 +44,12 @@ public class HhImportRunner implements ApplicationRunner {
     }
 
     private static String optStr(ApplicationArguments args, String name, String def) {
-        return (args.getOptionValues(name) != null) ? args.getOptionValues(name).getFirst() : def;
+        var values = args.getOptionValues(name);
+        return (values != null && !values.isEmpty() && values.get(0) != null) ? values.get(0) : def;
     }
 
     private static int optInt(ApplicationArguments args, String name, int def) {
-        return (args.getOptionValues(name) != null) ? Integer.parseInt(args.getOptionValues(name).getFirst()) : def;
+        var values = args.getOptionValues(name);
+        return (values != null && !values.isEmpty() && values.get(0) != null) ? Integer.parseInt(values.get(0)) : def;
     }
 }
